[gd_scene load_steps=6 format=2]

[ext_resource path="res://redesign/scripts/Actors/Kickable.gd" type="Script" id=1]
[ext_resource path="res://sprites/block_highlight.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 33, 33 )

[node name="Kickable" type="Node2D"]
script = ExtResource( 1 )

[node name="KickableHighlight" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )

[node name="KickableArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="KickableCollision" type="CollisionShape2D" parent="KickableArea"]
shape = SubResource( 4 )

[node name="StunArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="StunCollision" type="CollisionShape2D" parent="StunArea"]
shape = SubResource( 5 )

[connection signal="area_entered" from="StunArea" to="." method="_on_StunArea_area_entered"]
[connection signal="area_exited" from="StunArea" to="." method="_on_StunArea_area_exited"]
